[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game/Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://Screens/UI/PopupGameOver.tscn" type="PackedScene" id=2]
[ext_resource path="res://Screens/GameScreen.gd" type="Script" id=3]
[ext_resource path="res://Screens/assets/point_gain.ogg" type="AudioStream" id=4]
[ext_resource path="res://Game/Environment/assets/Flat Night 4 BG.png" type="Texture" id=5]
[ext_resource path="res://Screens/UI/UI.tscn" type="PackedScene" id=6]

[node name="GameScreen" type="Node"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Back" type="Control" parent="."]
process_priority = -1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Back"]
process_priority = -1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
process_priority = -1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="CenterContainer"]
process_priority = -1
margin_right = 360.0
margin_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="CenterContainer/ViewportContainer"]
size = Vector2( 360, 640 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Game" parent="CenterContainer/ViewportContainer/Viewport" instance=ExtResource( 1 )]

[node name="UI" parent="CenterContainer/ViewportContainer/Viewport" instance=ExtResource( 6 )]
process_priority = -1

[node name="PopupDialog" parent="CenterContainer/ViewportContainer/Viewport" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 55.0
margin_top = 195.0
margin_right = 305.0
margin_bottom = 445.0

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
margin_left = 180.0
margin_top = 320.0
margin_right = 180.0
margin_bottom = 320.0

[node name="AddScore" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="retry" from="CenterContainer/ViewportContainer/Viewport/PopupDialog" to="." method="_on_PopupDialog_retry"]
